...
            android:layout_below="@id/verificationText"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verificationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/validCharactersVerificationCode"
                android:maxLength="8"
                android:textAlignment="center"
                android:textSize="18dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendVerificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verificationTextField"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
...
