<resources>
    <string name="app_name">UVGram</string>
    <string name="loginButton">Iniciar sesión</string>
    <string name="signUp">Registrate</string>
    <string name="welcome">¡Bienvenido a UVGram!</string>
    <string name="loginText">Inicia sesión</string>
    <string name="emailLabel">Email</string>
    <string name="editProfile">Editar perfil</string>
    <string name="passwordHint">Contraseña</string>
    <string name="emailHint">ejemplo@email.com</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="clickHereLink">Da click aquí.</string>
    <string name="registrationLabel">¿No tienes una cuenta?</string>
    <string name="nameLabel">Nombre</string>
    <string name="confirmedPasswordLabel">Confirmar contraseña</string>
    <string name="recoveryText">Necesitamos tu correo electrónico para validar tu identidad y puedas recuperar tu cuenta.</string>
    <string name="emailSentText">Te hemos enviado un email con instrucciones para reestablecer tu contraseña. Si no recibes el correo electrónico después de un tiempo, revisa tu correo no deseado.</string>
    <string name="sendText">Enviar</string>
    <string name="changePassword">Cambiar contraseña</string>
    <string name="passwordChangeText">Establece una nueva contraseña. Te recomendamos anotarla en algún sitio para no perderla.</string>
    <string name="fullNamePlaceholder">Nombre completo</string>
    <string name="usernamePlaceholder">username</string>
    <string name="presentationPlaceholder">Aquí iría la presentación del usuario. Esto es un ejemplo.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completeRegistration">Completa tu registro</string>
    <string name="registrationHelperText">Ayúdanos a completar tu registro llenando los siguientes campos, así te podremos conocer mejor. </string>
    <string name="usernameLabel">Nombre de usuario</string>
    <string name="birthdateInput">Fecha de nacimiento</string>
    <string name="phoneLabel">Teléfono</string>
    <string name="presentationLabel">Presentación</string>
    <string name="saveLabel">Guardar</string>
    <string name="cancelLabel">Cancelar</string>
    <string name="verificationText">Te hemos enviado un código de verificación al correo electrónico con el que te registraste. \nIngrésalo en el siguiente campo.</string>
    <string name="resendCode">¿No recibiste el código?</string>
    <string name="retryCodeSent">Solicita uno nuevo aquí.</string>
    <string name="emptyInputs">No dejar campos vacíos.</string>
    <string name="followRequests">Solicitudes de seguimiento</string>
    <string name="followText">Seguir</string>
    <string name="writeComment">Escribe un comentario</string>
    <string name="successfulLogin">¡Inicio de sesión exitoso!</string>
    <string name="passwordFormatError">Contraseña inválida. Debe tener al menos 6 carácteres.</string>
    <string name="incorrectPassword">Contraseña errónea.</string>
    <string name="passwordsNotMatching">Las contraseñas no coinciden.</string>
    <string name="userNotFound">Usuario no encontrado.</string>
    <string name="validCharactersUsername">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_</string>
    <string name="validCharactersVerificationCode">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="validCharactersFullName">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="validCharactersEmail">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-@.</string>
    <string name="validCharactersPhone">0123456789</string>
    <string name="invalidCodeFormat">Código de verificación no válido.</string>
    <string name="errorText">Ocurrió un error, vuelva a intentarlo.</string>
    <string name="invalidPhoneNumber">Número de teléfono debe contener 10 dígitos.</string>
    <string name="incompleteOperation">No fue posible completar la operación, intente de nuevo.</string>

    <style name="errorText">Ha ocurrido un error. Inténtelo de nuevo.</style>
</resources>