<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.LoginActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="Foto de Facultad de Estadística e Informática"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pxl_20221001_231154257_crop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/source_sans_pro_regular"
                android:text="@string/welcome"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeText"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/signUp"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verificationTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginText"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/nameLabel"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="@color/uvGreen"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInput"
                    android:digits="@string/validCharactersFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:textSize="12sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/verificationTextField"
                android:digits="@string/validCharactersEmail"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/emailLabel"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="@color/uvGreen"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:textSize="12sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTextField"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/passwordHint"
                app:passwordToggleEnabled="true"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="@color/uvGreen"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:textSize="12sp"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmedPasswordTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTextField"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/confirmedPasswordLabel"
                app:passwordToggleEnabled="true"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="@color/uvGreen"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmedPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:textSize="12sp"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signUpButton"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmedPasswordTextField"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/uvBlue"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:minHeight="48dp"
                android:text="@string/signUp"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUpButton"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/registrationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="¿Ya tienes una cuenta?" />

                <Button
                    android:id="@+id/loginButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:layout_marginTop="1dp"
                    android:layout_toEndOf="@+id/registrationLabel"
                    android:text="@string/clickHereLink"
                    android:textColor="@color/uvBlue" />

            </RelativeLayout>


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>